# tokenizer-workshop

./: README.md  config.yaml  guide.md  pyproject.toml  report.md
data/: sample_code.txt  sample_en.txt  sample_tr.txt
src/tokenizer_workshop/: __init__.py  compare.py  config.py
src/tokenizer_workshop/api/reports/: __init__.py  base.py  helpers.py  markdown_report.py  (+2 more)
src/tokenizer_workshop/cli/: __init__.py  controller.py  input.py  menu.py  runner.py
src/tokenizer_workshop/comparisons/: __init__.py  compare_manager.py  comparison_models.py  models.py  protocols.py  runner.py
src/tokenizer_workshop/evaluators/: __init__.py  metrics.py
src/tokenizer_workshop/tokenizers/: __init__.py  base.py  byte_bpe_tokenizer.py  byte_level_bpe_tokenizer.py  byte_tokenizer.py  char_tokenizer.py  morpheme_tokenizer.py  ngram_tokenizer.py  pre_trained_tokenizer_wrapper.py  regex_bpe_tokenizer.py  regex_tokenizer.py  simple_bpe_tokenizer.py  subword_tokenizer.py  unigram_tokenizer.py  word_tokenizer.py  wordpiece_tokenizer.py
src/tokenizer_workshop/trainers/: __init__.py  bpe_trainer.py
src/tokenizer_workshop/utils/: __init__.py  data_loader.py
tests/: test_bpe_trainer.py  test_byte_bpe_tokenizer.py  test_byte_level_bpe_tokenizer.py  test_byte_tokenizer.py  test_char_tokenizer.py  test_metrics.py  test_morpheme_tokenizer.py  test_ngram_tokenizer.py  test_pre_trained_tokenizer_wrapper.py  test_regex_bpe_tokenizer.py  test_regex_tokenizer.py  test_simple_bpe_tokenizer.py  test_subword_tokenizer.py  test_unigram_tokenizer.py  test_word_tokenizer.py  test_wordpiece_tokenizer.py
(+28 files in other folders)
